src/objects/MCAR_Supplier_Data_Cross_Reference__c.object
<CustomObject>
    <description>MCAR- DEM0008846</description>
    <fields>
        <fullName>Enterprise_ID__c</fullName>
        <label>Enterprise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <description>MCAR- DEM0008846</description>
        <inlineHelpText>Should be one of the field values from the &quot;Manufacturer name&quot; fields in MEPS.</inlineHelpText>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <description>MCAR- DEM0008846</description>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_XR_ID_Formula__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id, Supplier_XR_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier_XR_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_XR_ID__c</fullName>
        <displayFormat>SXR-{0000000}</displayFormat>
        <label>Supplier_XR_ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Supplier XR</label>
    <listViews>
        <fullName>Allfields</fullName>
        <columns>NAME</columns>
        <columns>Enterprise_ID__c</columns>
        <columns>Manufacturer_Name__c</columns>
        <columns>Supplier_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Supplier ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier XR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>